@@ -48,9 +48,9 @@ class Overlay_Manager;
 
 const ushort NUMBER_OF_MAP_DIMENSIONS=15;
 const ushort MAP_DIMENSIONS[] = {
-   64, 96, 128, 160, 192, 224, 256,
-   288, 320, 352, 384, 416, 448, 480,
-   512 };
+   64, 80, 96, 112, 128, 144, 160, 176, 192, 208, 224, 240, 256,
+   272, 288, 304, 320, 336, 352, 368, 384, 400, 416, 432, 448, 464, 480,
+   496, 512 };
 
 
 class Path;
